@@ -1,6 +1,10 @@
 Version 0.4 -- Subversion 
 -----------------
 
+* Added version check to install.php
+* Added check to make sure bbcode exists before using it
+* Fixed bug in displaying 404 pages
+
 Version 0.3.1 -- Tue Jul 27 2004
 -----------------
 
